# BenchDrift

./: .gitignore  README.md  pyproject.toml  setup.py
config/: model_config.yaml
docs/: INSTALLATION.md  LONG_CONTEXT_VARIATIONS_README.md  RUNNING_THE_PIPELINE.md
notebooks/: demo_semantic.ipynb
scripts/: run_semantic_pipeline.sh
src/benchdrift/eval/: comprehensive_results_visualizer.py  llm_answer_matcher.py  llm_judge_answer_checker.py
src/benchdrift/models/: model_client.py  model_config_manager.py
src/benchdrift/pipeline/: calibrate_semantic_thresholds.py  complete_variation_pipeline.py  comprehensive_variation_engine_v2.py  long_context_variations.py  sankey_visualizer.py  semantic_composite_detector.py  unified_batched_pipeline_semantic.py  unified_variation_engine_batched.py  variation_answer_generator.py
