[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchdrift"
version = "0.1.0"
description = "A comprehensive benchmark drift detection pipeline for LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "BenchDrift Team"}
]
keywords = ["llm", "benchmark", "drift", "testing", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "sentence-transformers>=2.0.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
    "pyyaml>=5.4.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "plotly>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/benchdrift"
Repository = "https://github.com/yourusername/benchdrift"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pipeline*", "models*", "eval*"]
